@@ -1,3 +1,3 @@
 product=OpenXava
-version=6.5.1
-date=2021-4-13
+version=6.5.2beta
+date=2021-x-xx
